FIX: tmh filter checkbox not showing ADD: global propensity widget for provi.html

--- a/app/static/css/view.css
+++ b/app/static/css/view.css
@@ -244,3 +244,23 @@ div.control_info {
 div.chzn-container {
     display: inline-block;
 }
+
+.scale.bwr {
+    /* Old browsers */
+    background: rgb(0,0,255); 
+    /* FF3.6+ */
+    background: -moz-linear-gradient(left,  rgb(0,0,255) 0%, rgb(255,255,255) 50%, rgb(255,0,0) 100%); 
+    /* Chrome,Safari4+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgb(0,0,255)), color-stop(50%,rgb(255,255,255)), color-stop(100%,rgb(255,0,0)));
+    /* Chrome10+,Safari5.1+ */
+    background: -webkit-linear-gradient(left,  rgb(0,0,255) 0%,rgb(255,255,255) 50%,rgb(255,0,0) 100%); 
+    /* Opera 11.10+ */
+    background: -o-linear-gradient(left,  rgb(0,0,255) 0%,rgb(255,255,255) 50%,rgb(255,0,0) 100%); 
+    /* IE10+ */
+    background: -ms-linear-gradient(left,  rgb(0,0,255) 0%,rgb(255,255,255) 50%,rgb(255,0,0) 100%); 
+    /* W3C */
+    background: linear-gradient(left,  rgb(0,0,255) 0%,rgb(255,255,255) 50%,rgb(255,0,0) 100%);
+    /* IE6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0000ff', endColorstr='#ff0000',GradientType=1 ); 
+}
+
